manifest/gateway-domains.yaml
apiVersion: networking.istio.io/v1
kind: Gateway

metadata:
  name: ingress-gateway-k3s

spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
        - "*.fullcycle"

---
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: nginx-vs

spec:
  hosts:
    - "a.fullcycle"
  gateways:
    - ingress-gateway-k3s
  http:
    - route:
        - destination:
            host: nginx-service
            subset: v1
---
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: nginx-vs-b

spec:
  hosts:
    - "b.fullcycle"
  gateways:
    - ingress-gateway-k3s
  http:
    - route:
        - destination:
            host: nginx-service
            subset: v2
