manifest/vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: nginx-vs

spec:
  hosts:
    - nginx-service
  http:
    - route:
        - destination:
            host: nginx-service
            subset: v1
          weight: 0
        - destination:
            host: nginx-service
            subset: v2
          weight: 100
